.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconrcser__c.object
<CustomObject>
    <description>soconrcser__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconrcser_soconrc__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__soconrcser_socondev__r.rstk__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconrcser_socondev__r.rstk__socondev_sowarr__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcser_prcoverend__c</fullName>
        <inlineHelpText>The last date that the price override is in effect.</inlineHelpText>
        <label>Ending Date for Price Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcser_prcoverstart__c</fullName>
        <inlineHelpText>The first date that the price override is in effect.</inlineHelpText>
        <label>Starting Date for Price Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcser_price__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The periodic Recurring Charge Price to be charged during the “override” period.</inlineHelpText>
        <label>Periodic Price Override</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcser_socondev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The serialized &quot;device&quot; that this pricing override applies.  The device must be Covered Device defined on the Sales Contract (for serialized devices shipped against the said Contract).</inlineHelpText>
        <label>Serialized Device</label>
        <referenceTo>rstk__socondev__c</referenceTo>
        <relationshipLabel>Contract Recurring Charge by Devices</relationshipLabel>
        <relationshipName>soconrcsers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcser_soconrc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a link to the Recurring Charge that this record applies.</inlineHelpText>
        <label>Contract Recurring Charge</label>
        <referenceTo>rstk__soconrc__c</referenceTo>
        <relationshipLabel>Charge Device Detail</relationshipLabel>
        <relationshipName>soconrcsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Recurring Charge by Device</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Contract_Recurring_Charge_by_Devices</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconrcser_socondev__c</columns>
        <columns>rstk__soconrcser_soconrc__c</columns>
        <columns>rstk__soconrcser_price__c</columns>
        <columns>rstk__soconrcser_prcoverstart__c</columns>
        <columns>rstk__soconrcser_prcoverend__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Recurring Charge by Devices</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Recurring Charge by Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Ending_Date_for_Price_Override</fullName>
        <active>true</active>
        <description>Starting and Ending Date for Price Override should be set or keep blank together, and  Starting  date cannot be greater than Ending Date.</description>
        <errorConditionFormula>( ISBLANK( rstk__soconrcser_prcoverend__c ) &amp;&amp; !ISBLANK( rstk__soconrcser_prcoverstart__c ) ) || ( !ISBLANK( rstk__soconrcser_prcoverend__c ) &amp;&amp; ISBLANK( rstk__soconrcser_prcoverstart__c ) ) || (rstk__soconrcser_prcoverstart__c  &gt; rstk__soconrcser_prcoverend__c )</errorConditionFormula>
        <errorMessage>Starting and Ending Date for Price Override should be set or keep blank together, and  Starting  date cannot be greater than Ending Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Periodic_Price_Override</fullName>
        <active>true</active>
        <description>Periodic Price Override is Required , must be greater than zero if Starting Date for Price Override is Set , else zero accepted .</description>
        <errorConditionFormula>ISBLANK(rstk__soconrcser_price__c ) ||  (rstk__soconrcser_price__c &lt;= 0 &amp;&amp;  !ISBLANK( rstk__soconrcser_prcoverstart__c ) ) || (rstk__soconrcser_price__c  &lt; 0)</errorConditionFormula>
        <errorMessage>Periodic Price Override is Required , must be greater than zero if Starting Date for Price Override is Set , else zero accepted .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Serialized_Device</fullName>
        <active>true</active>
        <description>Serialized Device is Required , not Modifiable and should belong to Contract Recurring Charge related Contract.</description>
        <errorConditionFormula>ISBLANK( rstk__soconrcser_socondev__c ) || (! ISNEW() &amp;&amp;  ISCHANGED(rstk__soconrcser_socondev__c ) ) || ( rstk__soconrcser_socondev__r.rstk__socondev_socontract__c &lt;&gt;  rstk__soconrcser_soconrc__r.rstk__soconrc_socontract__c )</errorConditionFormula>
        <errorMessage>Serialized Device is Required , not Modifiable and should belong to Contract Recurring Charge related Contract.</errorMessage>
    </validationRules>
</CustomObject>